<resources>
    <string name="app_name">Museo IUA</string>
    <string name="saludar">Bienvenido a BYU</string>
    <string name="bienvenida">Bienvenido al Home</string>
    <string name="enviarMail">Enviar correo</string>
    <string name="respuestaMail">salio exitoso el enviar el mail</string>
    <string name="miTitulo">Mi Museo</string>
    <string name="toas">Este es el toast declararo en el OnPause</string>
    <string name="snackbar">"Se preciono el boton flotante"</string>
    <string name="InputnameUser"> Nombre</string>
    <string name="InputlastNameUser">Apellido</string>
    <string name="email">E-mail</string>
    <string name="password"> Contraseña</string>
    <string name="botonIngresar"> Ingresar</string>
    <string name="botonRegistrar"> Nuevo usuario? Registrate</string>
    <string name="botonPass"> Olvidaste tu contraseña?</string>
    <string name="usarMetodos">Usar otros metodos</string>
    <string name="Recupera">Recuperá tu contraseña</string>
    <string name="Registro">Registro Usuario</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="verifyPass">Verificar contraseña</string>
    <string name="escaner">Escanee el codigo dentro de los limites</string>
    <string name="volver">Volver</string>
    <string name="tuPerfil">Tu perfil</string>
    <string name="DatosCorrectos">Datos Correctos</string>
    <string name="tituloPorDefecto">Titulo exhibición</string>
    <string name="introPorDefecto">introduccion</string>
    <string name="contenidoPorDefecto">Contenido de mi exhibicion de mi museo de cordoba capital</string>
    <string name="verContenido">Ver contenido</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="listExhibits">Todas las exibiciones</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_profile">Editar Perfil</string>

    <string name="closeSession">Cerrar Sesion</string>
    <string name="nameUser">Franco Gomez</string>
    <string name="language">Lenguaje</string>
    <string name="security">Seguridad</string>
    <string name="privacity">Privacidad</string>
    <string name="notifity">Notificaciones</string>
    <string name="information">Informacion</string>
    <string name="verifyMail">El mail ingresado no es correcto</string>
    <string name="nombreLugar">Nombre de la atraccion</string>
    <string name="loremIpsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed dui non elit blandit auctor. Duis tincidunt blandit sollicitudin.
        Fusce egestas laoreet massa in pretium. Nunc et convallis augue, vitae pharetra metus.
        In efficitur urna nisl, efficitur dictum augue accumsan sed.
        Fusce lobortis, diam id convallis imperdiet, purus mauris porttitor.</string>
    <string name="calificacion">Califica la exhibicion</string>
    <!-- GROOT -->
    <string name="titleGroot">groot</string>
    <string name="introGroot">Introduccion groot</string>
    <string name="contentGroot">Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación. Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación</string>
    <!-- Mamut -->
    <string name="titleMamut">Mamut</string>
    <string name="introMamut">Introduccion mamut</string>
    <string name="contentMamut">Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación. Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación</string>
    <!-- Oso Polar -->
    <string name="titleOsoPolar">Oso polar</string>
    <string name="introOsoPolar">Introduccion oso polar</string>
    <string name="contentOsoPolar">El oso polar u oso blanco (Ursus maritimus) es una especie de mamífero carnívoro de la familia de los osos (Ursidae).2​ Es junto con su pariente, el oso Kodiak (Ursus arctos middendorffi), uno de los carnívoros terrestres más grandes de la Tierra.3​ Vive en el medio polar y zonas heladas del hemisferio norte. Es el único superdepredador del Ártico</string>
    <!-- Tigre Dientes Sable -->
    <string name="titleTigreDientes">groot</string>
    <string name="introTigreDientes">Introduccion groot</string>
    <string name="contentTigreDientes">Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación. Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación</string>
    <!-- Dinosaurio -->
    <string name="titleDinosaurio">Tiranosaurio Rex</string>
    <string name="introDinosaurio">Introduccion dinosaurio</string>
    <string name="contentDinosaurio">Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación. Groot es un superhéroe ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por Stan Lee, Larry Lieber y Jack Kirby, el personaje apareció por primera vez en Tales to Astonish # 13 (noviembre de 1960). Una criatura extraterrestre, similar a un árbol sensible, el Groot original apareció por primera vez como un invasor que pretendía capturar humanos para la experimentación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estrella">No hemos encontrado favoritos.</string>
    <string name="btnModificar">MODIFICAR</string>
    <string name="btnModificarFoto">MODIFICAR FOTO</string>
    <string name="mi_perfil">MI PERFIL</string>
    <string name="Confirmar">CONFIRMAR</string>
    <string name="sugerencia">Dejanos tu sugerencia</string>
    <string name="InputSugerencia">Sugerencia</string>
    <string name="sendSugest">Enviar sugerencia</string>
    <string name="link_audio">Link Audio</string>
    <string name="no_hay_conexion_a_internet">No hay conexion a internet</string>
    <string name="verifiqueSuConexion">Verifique su conexion a internet e intente nuevamente</string>
    <string name="reintentar">Reintentar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_fell_back_registers">FellBackRegisters</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>