<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal_blue"
    tools:context=".fragments.Configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            
            <ImageView
                android:id="@+id/image_profile_con"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textSize="25dp"
                tools:text="Fulano Sultano" />

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/edit_profile"
                tools:ignore="MissingConstraints,OnClick" />

            <Button
                android:id="@+id/buttonCloseSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/closeSession"
                android:layout_marginTop="4dp"
                tools:ignore="MissingConstraints,OnClick"/>

            <Button
                android:id="@+id/buttonlanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/language" />

            <Button
                android:id="@+id/buttonSugerencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/sugerencia"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonSeguridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/security"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonInformacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/information"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonNotificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/notifity"
                tools:ignore="MissingConstraints" />

            //Es bobo solo se realiza para que el menu no tape nada
            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>