<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal_blue"
    tools:context=".fragments.Sugerencia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonReturnSugerencia"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/volver"
            android:textColor="@color/principal_blue"
            android:translationZ="1dp"
            app:icon="@drawable/ic_flechaatras"
            app:iconTint="@color/principal_blue"
            app:strokeColor="@color/white"
            app:strokeWidth="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sugerencia"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sugerencia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:hint="@string/InputSugerencia">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enviarSuggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/sendSugest"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

    </LinearLayout>

</FrameLayout>