<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_byu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="#1492E6"
            app:boxStrokeColor="#1492E6"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#1492E6"
            app:hintTextColor="#1492E6"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_candado">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#1492E6"
            android:text="@string/botonIngresar" />

        <Button
            android:id="@+id/registrar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/botonRegistrar"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="#A3ABB0" />
        <Button
            android:id="@+id/forgetPass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/botonPass"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="#A3ABB0" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>