<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoInternetConnection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/no_internet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_conexion_a_internet"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verifiqueSuConexion"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReintentar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/reintentar"
            android:backgroundTint="@color/principal_blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>