<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonReturnName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/volver"
            android:textColor="@color/principal_blue"
            app:icon="@drawable/ic_flechaatras"
            app:iconTint="@color/principal_blue"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Registro"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InputnameUser"
            app:errorEnabled="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonNextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/principal_blue"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/botonSiguiente"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>