<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atraction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <Button
            android:id="@+id/buttonVolverAtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:textColor="@color/principal_blue"
            app:strokeWidth="0dp"
            app:strokeColor="@color/white"
            app:icon="@drawable/ic_flechaatras"
            app:iconTint="@color/principal_blue"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <ImageView
            android:id="@+id/images_atraction"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreLugar"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loremIpsum"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calificacion"
            android:textAlignment="center"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_thumb_up_24"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_baseline_thumb_down_24"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>