<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="490dp"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_groot"
            app:layout_constraintTop_toBottomOf="@id/buttonEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/circle" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/image_profile"
            tools:text="Fulano Sultano" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/black"
        android:onClick="btnEditProfile"
        android:text="@string/edit_profile"
        android:gravity="center"
        tools:ignore="MissingConstraints,OnClick"
        app:layout_constraintStart_toStartOf="@id/text_name"/>

    <Button
        android:id="@+id/buttonCloseSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/closeSession"
        android:layout_marginTop="4dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/buttonEdit" />
    <Button
            android:id="@+id/buttonlanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/language"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/buttonCloseSession" />
    <Button
            android:id="@+id/buttonPrivacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/privacity"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/buttonlanguage" />
        <Button
            android:id="@+id/buttonSeguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/security"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/buttonPrivacidad" />

        <Button
            android:id="@+id/buttonInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/information"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/buttonSeguridad" />

        <Button
            android:id="@+id/buttonNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/notifity"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/buttonInformacion" />
    </LinearLayout>
    </ScrollView>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_qr_code_scanner_24"
                app:layout_anchor="@id/bottomAppBar" />

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/principal_blue">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    app:itemIconTint="@color/black"
                    app:itemTextColor="@color/black"
                    app:menu="@menu/menu" />
            </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>